carnival pack editor support

--- a/CarnivalPack/CarnivalPack.csproj
+++ b/CarnivalPack/CarnivalPack.csproj
@@ -65,6 +65,15 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\Dependencies\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="PlusLevelStudio">
+      <HintPath>..\DependenciesExtra\PlusLevelStudio.dll</HintPath>
+    </Reference>
+    <Reference Include="PlusStudioLevelFormat">
+      <HintPath>..\DependenciesExtra\PlusStudioLevelFormat.dll</HintPath>
+    </Reference>
+    <Reference Include="PlusStudioLevelLoader">
+      <HintPath>..\DependenciesExtra\PlusStudioLevelLoader.dll</HintPath>
+    </Reference>
     <Reference Include="Rewired_Core">
       <HintPath>..\Dependencies\Rewired_Core.dll</HintPath>
     </Reference>
